drawMap added and functional

--- a/app/index.html
+++ b/app/index.html
@@ -8,6 +8,7 @@
     <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
     <!-- build:css(.) styles/vendor.css -->
     <!-- bower:css -->
+    <link rel="stylesheet" href="bower_components/ol3/css/ol.css" />
     <!-- endbower -->
     <!-- endbuild -->
     <!-- build:css(.tmp) styles/main.css -->
@@ -66,10 +67,14 @@
     <script src="bower_components/angular-route/angular-route.js"></script>
     <script src="bower_components/angular-sanitize/angular-sanitize.js"></script>
     <script src="bower_components/angular-touch/angular-touch.js"></script>
+    <script src="bower_components/ol3/build/ol.js"></script>
     <!-- endbower -->
     <!-- endbuild -->
 
         <!-- build:js({.tmp,app}) scripts/scripts.js -->
+	<!--	<script src="http://openlayers.org/en/v3.2.0/css/ol.css"></script>
+		<script src="http://openlayers.org/en/v3.2.0/build/ol.js"></script>
+		<script src="http://www.opensnowmap.org/js/OpenLayers-2.13.1/OpenLayers.js"></script> -->
         <script src="scripts/app.js"></script>
         <script src="scripts/controllers/main.js"></script>
 		<script src="scripts/services/factories.js"></script>
