--- a/app/index.html
+++ b/app/index.html
@@ -24,8 +24,10 @@
     <div class="container">
       <div class="header">
         <ul class="nav nav-pills pull-right">
-          <li class="active"><a ng-href="#">Home</a></li>
-          <li><a ng-href="#">Contact</a></li>
+          <li><a ng-href="#">Keystone</a></li>
+          <li ng-class="{active: isActive('/breck')}"><a ng-href="/breck">Breck</a></li>
+		  <li><a ng-href="#">Vail</a></li>
+		  <li><a ng-href="#">Beaver Creek</a></li>
         </ul>
         <h3 class="text-muted">Colorado Vail Resorts Tracker</h3>
       </div>
@@ -77,7 +79,9 @@
 		<script src="http://www.opensnowmap.org/js/OpenLayers-2.13.1/OpenLayers.js"></script> -->
         <script src="scripts/app.js"></script>
         <script src="scripts/controllers/main.js"></script>
-		<script src="scripts/services/factories.js"></script>
+		<script src="scripts/services/dailyStatus.js"></script>
+		<script src="scripts/services/resortKeys.js"></script>
+		<script src="http://tombatossals.github.io/angular-openlayers-directive/dist/angular-openlayers-directive.min.js"></script>
         <!-- endbuild -->
 </body>
 </html>
