Nav and map update among resorts complete

--- a/app/index.html
+++ b/app/index.html
@@ -25,15 +25,7 @@
    
     <div class="container">
 	 
-	  <div class="header">
-	  <ul class="nav nav-pills pull-right">
-	    <li><a href="#/keystone">Keystone</a></li>
-	    <li><a href="#/breck">Breck</a></li>
-	    <li><a>Vail</a></li>
-	    <li><a>Beaver Creek</a></li>
-	  </ul>
-	  <h3 class="text-muted">Colorado Vail Resorts Tracker</h3>
-	  </div>
+	 <!-- HEADER GOES HERE -->
 	  
       <div ng-view=""></div>
 
@@ -63,9 +55,9 @@
 
     <!-- build:js(.) scripts/vendor.js -->
     <!-- bower:js -->
-  <!--  <script src="bower_components/jquery/dist/jquery.js"></script> -->
+    <script src="bower_components/jquery/dist/jquery.js"></script>
     <script src="bower_components/angular/angular.js"></script>
-    <!--<script src="bower_components/bootstrap-sass-official/assets/javascripts/bootstrap.js"></script> -->
+    <script src="bower_components/bootstrap-sass-official/assets/javascripts/bootstrap.js"></script>
     <script src="bower_components/angular-animate/angular-animate.js"></script>
     <script src="bower_components/angular-cookies/angular-cookies.js"></script>
     <script src="bower_components/angular-resource/angular-resource.js"></script>
