--- a/app/index.html
+++ b/app/index.html
@@ -2,7 +2,7 @@
 <html class="no-js">
   <head>
     <meta charset="utf-8">
-    <title></title>
+    <title>Colorado Vail Resorts Tracker</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width">
     <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
@@ -76,7 +76,6 @@
         <script src="scripts/controllers/main.js"></script>
 		<script src="scripts/services/mapService.js"></script>
 		<script src="scripts/services/dailyStatus.js"></script>
-		<script src="scripts/services/resortKeys.js"></script>
 		<script src="http://tombatossals.github.io/angular-openlayers-directive/dist/angular-openlayers-directive.min.js"></script>
 	    <script src="http://ol3js.org/en/master/build/ol.js"></script> 
 	     <!-- Include this version to improve your development/debugging experience
