--- a/app/index.html
+++ b/app/index.html
@@ -14,6 +14,7 @@
     <!-- build:css(.tmp) styles/main.css -->
     <link rel="stylesheet" href="styles/main.css">
     <!-- endbuild -->
+	<meta name="viewport" content="width=device-width, initial-scale=1">
   </head>
   <body ng-app="coResortTrackerApp">
     <!--[if lt IE 7]>
@@ -23,15 +24,12 @@
     <!-- Add your site or application content here -->
    
    
-    <div class="container">
+    <div class="container-fluid">
 	 
 	 <!-- HEADER GOES HERE -->
 	  
       <div ng-view=""></div>
 
-      <div class="footer">
-        <p><span class="glyphicon glyphicon-heart"></span> from the Yeoman team</p>
-      </div>
     </div>
 
 
