filter fixed. Had to removed the index > 0 filter by creating a custom filter that spliced the dailyStatus array.

--- a/app/index.html
+++ b/app/index.html
@@ -2,7 +2,7 @@
 <html class="no-js">
   <head>
     <meta charset="utf-8">
-    <title>Colorado Vail Resorts Tracker</title>
+    <title>Vail Colorado Resorts Tracker</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width">
     <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
@@ -73,8 +73,14 @@
 		<script src="http://www.opensnowmap.org/js/OpenLayers-2.13.1/OpenLayers.js"></script> -->
         <script src="scripts/app.js"></script>
         <script src="scripts/controllers/main.js"></script>
+		<!--  SERVICES  -->
 		<script src="scripts/services/mapService.js"></script>
 		<script src="scripts/services/dailyStatus.js"></script>
+		
+		<!--   FILTERS   -->
+		<script src="scripts/filters/trailnameFilter.js"></script>
+		
+		
 		<script src="http://tombatossals.github.io/angular-openlayers-directive/dist/angular-openlayers-directive.min.js"></script>
 	    <script src="http://ol3js.org/en/master/build/ol.js"></script> 
 	     <!-- Include this version to improve your development/debugging experience
